--- a/Backpack_model.ipynb
+++ b/Backpack_model.ipynb
@@ -296,7 +296,8 @@
    "outputs": [],
    "source": [
     "cat_imputer = SimpleImputer(strategy= \"most_frequent\")\n",
-    "cat_imputer.fit_transform(pd.DataFrame(X_train[obj_cols]))\n",
+    "cat_X_train =pd.DataFrame(cat_imputer.fit_transform(X_train[obj_cols]))\n",
+    "cat_X_val = pd.DataFrame(cat_imputer.transform(X_val[obj_cols]))\n",
     "\n",
     "num_inputer = SimpleImputer(strategy= \"mean\")\n",
     "num_X_train = pd.DataFrame(num_inputer.fit_transform((num_X_train)))\n",
@@ -306,6 +307,33 @@
   {
    "cell_type": "code",
    "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0    0\n",
+       "1    0\n",
+       "2    0\n",
+       "3    0\n",
+       "4    0\n",
+       "5    0\n",
+       "6    0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cat_X_val.isnull().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -338,7 +366,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0     0\n",
+       "1     0\n",
+       "2     0\n",
+       "3     0\n",
+       "4     0\n",
+       "5     0\n",
+       "6     0\n",
+       "7     0\n",
+       "8     0\n",
+       "9     0\n",
+       "10    0\n",
+       "11    0\n",
+       "12    0\n",
+       "13    0\n",
+       "14    0\n",
+       "15    0\n",
+       "16    0\n",
+       "17    0\n",
+       "18    0\n",
+       "19    0\n",
+       "20    0\n",
+       "21    0\n",
+       "22    0\n",
+       "23    0\n",
+       "24    0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "OH_X_val_cols.isnull().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -351,16 +424,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "MAE SCORE:  33.676676719129595\n",
+      "MAE SCORE:  33.68667046834461\n",
       "\n",
-      "Root Mean Squared Error Score:  38.9069589067604\n"
+      "Root Mean Squared Error Score:  38.91548931136094\n"
      ]
     }
    ],
@@ -388,7 +461,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -406,7 +479,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -418,7 +491,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -427,7 +500,7 @@
        "(200000, 9)"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -438,128 +511,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cat_X_test = X_test_full[obj_cols]\n",
+    "num_X_test = X_test_full.select_dtypes(exclude = [\"object\"])\n",
+    "\n",
+    "cat_X_test = pd.DataFrame(cat_imputer.transform(pd.DataFrame(cat_X_test)))\n",
+    "num_X_test = pd.DataFrame(num_inputer.transform(num_X_test))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>0</th>\n",
-       "      <th>1</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>2.0</td>\n",
-       "      <td>20.671147</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>7.0</td>\n",
-       "      <td>13.564105</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>9.0</td>\n",
-       "      <td>11.809799</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>1.0</td>\n",
-       "      <td>18.477036</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>2.0</td>\n",
-       "      <td>9.907953</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>199995</th>\n",
-       "      <td>2.0</td>\n",
-       "      <td>7.383498</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>199996</th>\n",
-       "      <td>9.0</td>\n",
-       "      <td>6.058394</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>199997</th>\n",
-       "      <td>9.0</td>\n",
-       "      <td>26.890163</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>199998</th>\n",
-       "      <td>10.0</td>\n",
-       "      <td>25.769153</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>199999</th>\n",
-       "      <td>8.0</td>\n",
-       "      <td>29.175026</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>200000 rows × 2 columns</p>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "           0          1\n",
-       "0        2.0  20.671147\n",
-       "1        7.0  13.564105\n",
-       "2        9.0  11.809799\n",
-       "3        1.0  18.477036\n",
-       "4        2.0   9.907953\n",
-       "...      ...        ...\n",
-       "199995   2.0   7.383498\n",
-       "199996   9.0   6.058394\n",
-       "199997   9.0  26.890163\n",
-       "199998  10.0  25.769153\n",
-       "199999   8.0  29.175026\n",
-       "\n",
-       "[200000 rows x 2 columns]"
+       "0    0\n",
+       "1    0\n",
+       "2    0\n",
+       "3    0\n",
+       "4    0\n",
+       "5    0\n",
+       "6    0\n",
+       "dtype: int64"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "cat_X_test = X_test_full[obj_cols]\n",
-    "num_X_test = X_test_full.select_dtypes(exclude = [\"object\"])\n",
-    "\n",
-    "cat_imputer.transform(pd.DataFrame(cat_X_test))\n",
-    "pd.DataFrame(num_inputer.transform(num_X_test))"
+    "num_X_test.isnull().sum()\n",
+    "cat_X_test.isnull().sum()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -583,7 +576,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -592,7 +585,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -624,27 +617,27 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>300000</td>\n",
-       "      <td>82.503899</td>\n",
+       "      <td>82.307327</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>300001</td>\n",
-       "      <td>82.856049</td>\n",
+       "      <td>82.510323</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>300002</td>\n",
-       "      <td>82.434265</td>\n",
+       "      <td>82.309326</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>300003</td>\n",
-       "      <td>81.715736</td>\n",
+       "      <td>81.812820</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>300004</td>\n",
-       "      <td>78.443222</td>\n",
+       "      <td>77.793205</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -654,27 +647,27 @@
        "    <tr>\n",
        "      <th>199995</th>\n",
        "      <td>499995</td>\n",
-       "      <td>79.890121</td>\n",
+       "      <td>78.578629</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>199996</th>\n",
        "      <td>499996</td>\n",
-       "      <td>80.121452</td>\n",
+       "      <td>80.021179</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>199997</th>\n",
        "      <td>499997</td>\n",
-       "      <td>82.636078</td>\n",
+       "      <td>82.634155</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>199998</th>\n",
        "      <td>499998</td>\n",
-       "      <td>81.487396</td>\n",
+       "      <td>81.350471</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>199999</th>\n",
        "      <td>499999</td>\n",
-       "      <td>81.366013</td>\n",
+       "      <td>81.309586</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -683,22 +676,22 @@
       ],
       "text/plain": [
        "            id      Price\n",
-       "0       300000  82.503899\n",
-       "1       300001  82.856049\n",
-       "2       300002  82.434265\n",
-       "3       300003  81.715736\n",
-       "4       300004  78.443222\n",
+       "0       300000  82.307327\n",
+       "1       300001  82.510323\n",
+       "2       300002  82.309326\n",
+       "3       300003  81.812820\n",
+       "4       300004  77.793205\n",
        "...        ...        ...\n",
-       "199995  499995  79.890121\n",
-       "199996  499996  80.121452\n",
-       "199997  499997  82.636078\n",
-       "199998  499998  81.487396\n",
-       "199999  499999  81.366013\n",
+       "199995  499995  78.578629\n",
+       "199996  499996  80.021179\n",
+       "199997  499997  82.634155\n",
+       "199998  499998  81.350471\n",
+       "199999  499999  81.309586\n",
        "\n",
        "[200000 rows x 2 columns]"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -710,7 +703,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
