--- a/Backpack_model.ipynb
+++ b/Backpack_model.ipynb
@@ -24,10 +24,19 @@
    "source": [
     "#loading the data\n",
     "\n",
-    "X_train_full = pd.read_csv(\"train.csv\", index_col= \"id\")\n",
-    "X_training_extra_full = pd.read_csv(\"training_extra.csv\", index_col= \"id\")\n",
-    "X_test_full = pd.read_csv(\"test.csv\", index_col= \"id\")\n"
+    "#X_train_full = pd.read_csv(\"train.csv\", index_col= \"id\")\n",
+    "#X_training_extra_full = pd.read_csv(\"training_extra.csv\", index_col= \"id\")\n",
+    "X_test_full = pd.read_csv(\"test.csv\", index_col= \"id\")\n",
+    "\n",
+    "X_train_full = pd.read_csv(\"training_extra.csv\", index_col= \"id\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -94,85 +103,85 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>154452</th>\n",
-       "      <td>Under Armour</td>\n",
+       "      <th>2164168</th>\n",
+       "      <td>Jansport</td>\n",
        "      <td>Polyester</td>\n",
-       "      <td>Small</td>\n",
-       "      <td>8.0</td>\n",
+       "      <td>Large</td>\n",
+       "      <td>5.0</td>\n",
        "      <td>No</td>\n",
        "      <td>Yes</td>\n",
-       "      <td>Backpack</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>Red</td>\n",
-       "      <td>16.817078</td>\n",
+       "      <td>6.668811</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>297220</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Leather</td>\n",
-       "      <td>Medium</td>\n",
-       "      <td>10.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Yes</td>\n",
-       "      <td>Backpack</td>\n",
-       "      <td>Blue</td>\n",
-       "      <td>16.750179</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>177</th>\n",
-       "      <td>Under Armour</td>\n",
-       "      <td>Nylon</td>\n",
-       "      <td>Medium</td>\n",
-       "      <td>8.0</td>\n",
-       "      <td>Yes</td>\n",
-       "      <td>Yes</td>\n",
-       "      <td>Messenger</td>\n",
-       "      <td>Green</td>\n",
-       "      <td>13.262331</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>44603</th>\n",
+       "      <th>2791140</th>\n",
        "      <td>Adidas</td>\n",
        "      <td>Polyester</td>\n",
-       "      <td>Small</td>\n",
-       "      <td>10.0</td>\n",
+       "      <td>Medium</td>\n",
+       "      <td>8.0</td>\n",
        "      <td>No</td>\n",
+       "      <td>No</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Red</td>\n",
+       "      <td>23.311326</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2780243</th>\n",
+       "      <td>Puma</td>\n",
+       "      <td>Canvas</td>\n",
+       "      <td>Small</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>No</td>\n",
+       "      <td>No</td>\n",
+       "      <td>Messenger</td>\n",
+       "      <td>Pink</td>\n",
+       "      <td>29.674513</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4173761</th>\n",
+       "      <td>Adidas</td>\n",
+       "      <td>Canvas</td>\n",
+       "      <td>Small</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>Yes</td>\n",
        "      <td>No</td>\n",
        "      <td>Tote</td>\n",
        "      <td>Gray</td>\n",
-       "      <td>29.694404</td>\n",
+       "      <td>13.588812</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>158177</th>\n",
+       "      <th>854040</th>\n",
        "      <td>Puma</td>\n",
-       "      <td>Nylon</td>\n",
+       "      <td>Canvas</td>\n",
        "      <td>Small</td>\n",
-       "      <td>2.0</td>\n",
+       "      <td>8.0</td>\n",
        "      <td>No</td>\n",
        "      <td>Yes</td>\n",
        "      <td>Messenger</td>\n",
-       "      <td>Blue</td>\n",
-       "      <td>11.291522</td>\n",
+       "      <td>Red</td>\n",
+       "      <td>28.545519</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "               Brand   Material    Size  Compartments Laptop Compartment  \\\n",
-       "id                                                                         \n",
-       "154452  Under Armour  Polyester   Small           8.0                 No   \n",
-       "297220           NaN    Leather  Medium          10.0                NaN   \n",
-       "177     Under Armour      Nylon  Medium           8.0                Yes   \n",
-       "44603         Adidas  Polyester   Small          10.0                 No   \n",
-       "158177          Puma      Nylon   Small           2.0                 No   \n",
+       "            Brand   Material    Size  Compartments Laptop Compartment  \\\n",
+       "id                                                                      \n",
+       "2164168  Jansport  Polyester   Large           5.0                 No   \n",
+       "2791140    Adidas  Polyester  Medium           8.0                 No   \n",
+       "2780243      Puma     Canvas   Small           7.0                 No   \n",
+       "4173761    Adidas     Canvas   Small           9.0                Yes   \n",
+       "854040       Puma     Canvas   Small           8.0                 No   \n",
        "\n",
-       "       Waterproof      Style  Color  Weight Capacity (kg)  \n",
+       "        Waterproof      Style Color  Weight Capacity (kg)  \n",
        "id                                                         \n",
-       "154452        Yes   Backpack    Red             16.817078  \n",
-       "297220        Yes   Backpack   Blue             16.750179  \n",
-       "177           Yes  Messenger  Green             13.262331  \n",
-       "44603          No       Tote   Gray             29.694404  \n",
-       "158177        Yes  Messenger   Blue             11.291522  "
+       "2164168        Yes        NaN   Red              6.668811  \n",
+       "2791140         No        NaN   Red             23.311326  \n",
+       "2780243         No  Messenger  Pink             29.674513  \n",
+       "4173761         No       Tote  Gray             13.588812  \n",
+       "854040         Yes  Messenger   Red             28.545519  "
       ]
      },
      "execution_count": 4,
@@ -222,13 +231,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['Under Armour' nan 'Adidas' 'Puma' 'Jansport' 'Nike']\n",
-      "['Polyester' 'Leather' 'Nylon' nan 'Canvas']\n",
-      "['Small' 'Medium' 'Large' nan]\n",
-      "['No' nan 'Yes']\n",
+      "['Jansport' 'Adidas' 'Puma' 'Nike' 'Under Armour' nan]\n",
+      "['Polyester' 'Canvas' 'Leather' 'Nylon' nan]\n",
+      "['Large' 'Medium' 'Small' nan]\n",
+      "['No' 'Yes' nan]\n",
       "['Yes' 'No' nan]\n",
-      "['Backpack' 'Messenger' 'Tote' nan]\n",
-      "['Red' 'Blue' 'Green' 'Gray' 'Pink' nan 'Black']\n"
+      "[nan 'Messenger' 'Tote' 'Backpack']\n",
+      "['Red' 'Pink' 'Gray' 'Black' 'Green' 'Blue' nan]\n"
      ]
     }
    ],
@@ -267,15 +276,15 @@
     {
      "data": {
       "text/plain": [
-       "Brand                   7767\n",
-       "Material                6693\n",
-       "Size                    5274\n",
-       "Compartments               0\n",
-       "Laptop Compartment      5938\n",
-       "Waterproof              5697\n",
-       "Style                   6399\n",
-       "Color                   7972\n",
-       "Weight Capacity (kg)     110\n",
+       "Brand                   93537\n",
+       "Material                81934\n",
+       "Size                    65022\n",
+       "Compartments                0\n",
+       "Laptop Compartment      72918\n",
+       "Waterproof              69766\n",
+       "Style                   76840\n",
+       "Color                   99068\n",
+       "Weight Capacity (kg)     1331\n",
        "dtype: int64"
       ]
      },
@@ -306,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -339,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -352,25 +361,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "MAE SCORE:  33.68667046834461\n",
-      "\n",
-      "Root Mean Squared Error Score:  38.91548931136094\n"
+      "Root Mean Squared Error Score:  38.889697063242664\n"
      ]
     }
    ],
    "source": [
-    "MAE = mean_absolute_error(y_val, predictions)\n",
     "RMSE = root_mean_squared_error(y_val, predictions)\n",
-    "\n",
-    "print(\"MAE SCORE: \", MAE)\n",
-    "print(\"\\nRoot Mean Squared Error Score: \", RMSE)"
+    "print(\"Root Mean Squared Error Score: \", RMSE)"
    ]
   },
   {
@@ -389,7 +393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -407,7 +411,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -419,7 +423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -432,7 +436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -456,7 +460,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -465,7 +469,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -497,27 +501,27 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>300000</td>\n",
-       "      <td>82.307327</td>\n",
+       "      <td>81.833290</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>300001</td>\n",
-       "      <td>82.510323</td>\n",
+       "      <td>83.080635</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>300002</td>\n",
-       "      <td>82.309326</td>\n",
+       "      <td>81.452499</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>300003</td>\n",
-       "      <td>81.812820</td>\n",
+       "      <td>81.117950</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>300004</td>\n",
-       "      <td>77.793205</td>\n",
+       "      <td>78.784607</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -527,27 +531,27 @@
        "    <tr>\n",
        "      <th>199995</th>\n",
        "      <td>499995</td>\n",
-       "      <td>78.578629</td>\n",
+       "      <td>79.698769</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>199996</th>\n",
        "      <td>499996</td>\n",
-       "      <td>80.021179</td>\n",
+       "      <td>79.776421</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>199997</th>\n",
        "      <td>499997</td>\n",
-       "      <td>82.634155</td>\n",
+       "      <td>82.574570</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>199998</th>\n",
        "      <td>499998</td>\n",
-       "      <td>81.350471</td>\n",
+       "      <td>81.801010</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>199999</th>\n",
        "      <td>499999</td>\n",
-       "      <td>81.309586</td>\n",
+       "      <td>81.264618</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -556,22 +560,22 @@
       ],
       "text/plain": [
        "            id      Price\n",
-       "0       300000  82.307327\n",
-       "1       300001  82.510323\n",
-       "2       300002  82.309326\n",
-       "3       300003  81.812820\n",
-       "4       300004  77.793205\n",
+       "0       300000  81.833290\n",
+       "1       300001  83.080635\n",
+       "2       300002  81.452499\n",
+       "3       300003  81.117950\n",
+       "4       300004  78.784607\n",
        "...        ...        ...\n",
-       "199995  499995  78.578629\n",
-       "199996  499996  80.021179\n",
-       "199997  499997  82.634155\n",
-       "199998  499998  81.350471\n",
-       "199999  499999  81.309586\n",
+       "199995  499995  79.698769\n",
+       "199996  499996  79.776421\n",
+       "199997  499997  82.574570\n",
+       "199998  499998  81.801010\n",
+       "199999  499999  81.264618\n",
        "\n",
        "[200000 rows x 2 columns]"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -583,7 +587,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
